scripts/deploy/instacrafter-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: instacrafter
  labels:
    name: instacrafter
