scripts/deploy/instacrafter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: instacrafter-web
  labels:
    app: instacrafter
spec:
  type: ClusterIP
  selector:
    app: instacrafter-web
  ports:
    - port: 80
