scripts/deploy/instacrafter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: instacrafter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: instacrafter.staging.codegarage.ru
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: instacrafter-web
                port:
                  number: 80
